added a new row

--- a/static.html
+++ b/static.html
@@ -62,6 +62,10 @@
     <td> &ltSUP&gt</td>
     <td> HNO<sup>3-</sup></td>
 </tr>
+<tr>
+    <td>I live in Edo State</td>
+    <td>I am from Esan North East Local Government</td>
+</tr>
     </table>
 </body>
 </html>
